# wycheproof-rs

./: Cargo.toml  NEWS.md  NOTICE.md  README.md
.github/workflows/: ci.yml  release-dry-run.yml  release.yml
crates/aead/: Cargo.toml
crates/aead/src/: aead.rs  daead.rs  lib.rs
crates/aead/tests/: parsing.rs
crates/bls/: Cargo.toml
crates/bls/src/: lib.rs
crates/bls/tests/: parsing.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  test_keys.rs
crates/dh/: Cargo.toml
crates/dh/src/: ec_curve.rs  ecdh.rs  lib.rs  xdh.rs
crates/dh/tests/: parsing.rs
crates/dsa/: Cargo.toml
crates/dsa/src/: dsa.rs  lib.rs
crates/dsa/tests/: parsing.rs
crates/ecdsa/: Cargo.toml
crates/ecdsa/src/: ecdsa.rs  lib.rs
crates/ecdsa/tests/: parsing.rs
crates/eddsa/: Cargo.toml
crates/eddsa/src/: eddsa.rs  lib.rs
crates/eddsa/tests/: parsing.rs
crates/fpe/: Cargo.toml
crates/fpe/src/: fpe_list.rs  fpe_str.rs  lib.rs
crates/fpe/tests/: parsing.rs
crates/kdf-jose/: Cargo.toml
crates/kdf-jose/src/: hkdf.rs  json_web.rs  lib.rs  pbes2.rs  pbkdf2.rs  primality.rs
crates/kdf-jose/tests/: parsing.rs
crates/mldsa/: Cargo.toml
crates/mldsa/src/: lib.rs  mldsa_sign.rs  mldsa_verify.rs
crates/mldsa/tests/: parsing.rs
crates/mlkem/: Cargo.toml
crates/mlkem/src/: lib.rs  mlkem.rs
crates/mlkem/tests/: parsing.rs
crates/rsa-encryption/: Cargo.toml
crates/rsa-encryption/src/: lib.rs  rsa_oaep.rs  rsa_pkcs1_decrypt.rs
crates/rsa-encryption/tests/: parsing.rs
crates/rsa-signature/: Cargo.toml
crates/rsa-signature/src/: lib.rs  rsa_pkcs1_sig_gen.rs  rsa_pkcs1_verify.rs  rsa_pss_verify.rs
crates/rsa-signature/tests/: parsing.rs
crates/symmetric/: Cargo.toml
crates/symmetric/src/: cipher.rs  keywrap.rs  lib.rs  mac.rs  mac_with_nonce.rs
crates/symmetric/tests/: parsing.rs
crates/umbrella/: Cargo.toml
crates/umbrella/src/: lib.rs
scripts/: check-wycheproof-drift.sh  publish-workspace.sh  sync-wycheproof-data.sh  verify-minimal-imports.sh  verify-package-sizes.sh  verify-wycheproof-data-offline.sh  verify-wycheproof-data.sh  wycheproof-data-manifest.tsv  wycheproof-data-sha256.tsv  wycheproof-source.env
src/: aead.rs  bls.rs  cipher.rs  daead.rs  datafiles.rs  dsa.rs  ec_curve.rs  ecdh.rs  ecdsa.rs  eddsa.rs  fpe_list.rs  fpe_str.rs  hkdf.rs  json_web.rs  jwk.rs  keywrap.rs  lib.rs  mac.rs  mac_with_iv.rs  mac_with_nonce.rs  mldsa_sign.rs  mldsa_verify.rs  mlkem.rs  pbes2.rs  pbkdf2.rs  primality.rs  rsa_oaep.rs  rsa_pkcs1_decrypt.rs  rsa_pkcs1_sig_gen.rs  rsa_pkcs1_sign.rs  rsa_pkcs1_verify.rs  rsa_pss_verify.rs  test_keys.rs  xdh.rs
src/data/: aes_ff1_base85_test.json  ecdsa_brainpoolP224r1_sha224_p1363_test.json  ecdsa_brainpoolP256r1_sha256_p1363_test.json  ecdsa_brainpoolP320r1_sha384_p1363_test.json  ecdsa_brainpoolP384r1_sha384_p1363_test.json  ecdsa_brainpoolP512r1_sha512_p1363_test.json  ecdsa_secp160k1_sha256_p1363_test.json  ecdsa_secp160k1_sha256_test.json  ecdsa_secp160r1_sha256_p1363_test.json  ecdsa_secp160r1_sha256_test.json  ecdsa_secp160r2_sha256_p1363_test.json  ecdsa_secp160r2_sha256_test.json  ecdsa_secp192k1_sha256_p1363_test.json  ecdsa_secp192k1_sha256_test.json  ecdsa_secp192r1_sha256_p1363_test.json  ecdsa_secp192r1_sha256_test.json  ecdsa_secp224k1_sha224_p1363_test.json  ecdsa_secp224k1_sha224_test.json  ecdsa_secp224k1_sha256_p1363_test.json  ecdsa_secp224k1_sha256_test.json  ecdsa_secp224r1_sha224_p1363_test.json  ecdsa_secp224r1_sha224_test.json  ecdsa_secp224r1_sha256_p1363_test.json  ecdsa_secp224r1_sha256_test.json  ecdsa_secp224r1_sha512_p1363_test.json  ecdsa_secp224r1_sha512_test.json  ecdsa_secp256k1_sha256_p1363_test.json  ecdsa_secp256k1_sha512_p1363_test.json  ecdsa_secp256k1_sha512_test.json  ecdsa_secp256r1_sha256_p1363_test.json  ecdsa_secp256r1_sha512_p1363_test.json  ecdsa_secp256r1_sha512_test.json  ecdsa_secp384r1_sha256_test.json  ecdsa_secp384r1_sha384_p1363_test.json  ecdsa_secp384r1_sha384_test.json  ecdsa_secp384r1_sha512_p1363_test.json  ecdsa_secp384r1_sha512_test.json  ecdsa_secp521r1_sha512_p1363_test.json  ecdsa_secp521r1_sha512_test.json  mldsa_44_sign_noseed_test.json  (+11 more)
tests/: tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs
