[package]
name = "wycheproof"
version = "0.7.0"
edition = "2021"
authors = ["Jack Lloyd <jack@randombit.net>"]
license = "Apache-2.0"
description = "Wycheproof test vectors"
repository = "https://github.com/randombit/wycheproof-rs"
documentation = "https://docs.rs/wycheproof"
categories = [ "cryptography" ]
rust-version = "1.57"

[features]
# By default all tests are included
default = ["aead", "bls", "cipher", "dsa", "ec", "ecdh", "ecdsa", "eddsa", "fpe", "hkdf", "json_web", "keywrap", "mac", "mlkem", "pbes2", "pbkdf2", "primality", "rsa_enc", "rsa_sig", "rsa_sig_gen", "xdh", "mldsa_sign", "mldsa_verify"]

aead = []
bls = []
cipher = []
dsa = []
ec = []
ecdh = []
ecdsa = []
eddsa = []
fpe = []
hkdf = []
json_web = []
keywrap = []
mac = []
mlkem = []
pbes2 = []
pbkdf2 = []
primality = []
rsa_enc = []
rsa_sig = []
rsa_sig_gen = []
xdh = []
mldsa_sign = []
mldsa_verify = []

[dependencies]
serde = { version = "1" }
serde_derive = { version = "1" }
serde_json = "1"
data-encoding = "2"

num-bigint = { version = "0.4", optional = true }
