[workspace]
resolver = "2"
members = [
    "crates/aead",
    "crates/bls",
    "crates/core",
    "crates/dh",
    "crates/dsa",
    "crates/ecdsa",
    "crates/eddsa",
    "crates/fpe",
    "crates/kdf-jose",
    "crates/mldsa",
    "crates/mlkem",
    "crates/rsa-encryption",
    "crates/rsa-signature",
    "crates/symmetric",
    "crates/umbrella",
    "xtask",
]
